# game_engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  UML.uxf  coverage.sh
include/: collision_handler.hh  gravity.hh  logger.hh  modules.hh  movable.hh  object.hh  obstacle.hh  player.hh  textured_object.hh
include/exceptions/: unvalidpath.hh
src/: CMakeLists.txt  collision_handler.cc  gravity.cc  logger.cc  main.cc  movable.cc  object.cc  object.hh  obstacle.cc  obstacle.hh  player.cc  player.hh  textured_object.cc  textured_object.hh
src/exceptions/: unvalidpath.hh
tests/: CMakeLists.txt  test_main.cc
tests/collision/: collision_handler_tests.hh
tests/logger/: logger_tests.cc
tests/object/: object_tests.cc  object_tests.hh
tests/obstacle/: obstacle-tests.cc
tests/player/: player_tests.cc  player_tests.hh
tests/tests_cases/collision/: collision_handler_tests.cc
tests/tests_cases/object/: object_tests.cc
tests/tests_cases/player/: player_tests.hh
tests/texturedObject/: textured_object_tests.cc  textured_object_tests.hh
